# delogist

./: .env  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
api/: models.py  urls.py  views.py
backend/: Dockerfile  db.json  pyproject.toml
backend/api/: admin.py  serializers.py  views.py
backend/api/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
config/: settings.py  urls.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json
frontend/src/components/: DeliveryReport.jsx  LoginPage.jsx
web/: package.json
web/src/: App.jsx
web/src/components/: DeliveryReport.jsx  LoginPage.jsx
